syntax = "proto3";
package account.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

message AccountListRequest {}

message AccountListResponse {
  repeated Account accounts = 1;
}

message Account {
  string client_id = 1;
  double amount = 2;
  double locked = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message AccountTopUpRequest {
  TopUp top_up = 1;
  message TopUp {
    string client_id = 1 [(buf.validate.field).string.uuid = true];
    double amount = 2 [(buf.validate.field).double.gt = 0.0];
  }
}

message AccountTopUpResponse {
  double balance = 1;
}
